# AlphaCut

./: .gitignore  CMakeLists.txt  README.md  makefile
Tests/: hello.mtl  hello_cut.mtl
include/: AlphaCut.h  Barycentric.h  CGAL_Helper.h  Color.h  Export.h  Face.h  HE_Edge.h  HE_Face.h  HE_Vertex.h  Image.h  Load.h  Log.h  Material.h  Mesh.h  TextureCoord.h  Vector2.h  Vertex.h
src/: AlphaCut.cpp  Barycentric.cpp  CGAL_Helper.cpp  Color.cpp  Export.cpp  Face.cpp  HE_Edge.cpp  HE_Face.cpp  HE_Vertex.cpp  Image.cpp  Load.cpp  Log.cpp  Material.cpp  Mesh.cpp  TextureCoord.cpp  Vector2.cpp  Vertex.cpp  main.cpp
